# paper-parser-skill

./: .gitignore  LICENSE  README.md  SKILL.md  config-example.yaml  pyproject.toml
.github/workflows/: publish.yml
paper_parser/: __init__.py  arxiv_client.py  cli.py  config.py  mineru_client.py  utils.py
