[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-parser-skill"
version = "0.1.4"
description = "A CLI tool for searching, downloading, parsing, and summarizing academic papers."
readme = "README.md"
authors = [
    { name = "kaihang", email = "kaihang.noir@gmail.com" }
]
dependencies = [
    "requests",
    "click",
    "PyYAML",
    "arxiv==4.0.0",
    "rapidfuzz",
]
requires-python = ">=3.10"

[project.scripts]
paper-parser = "paper_parser.cli:cli"
pp = "paper_parser.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["paper_parser*"]
